# cubetac

./: .gitignore  CHANGELOG.md  README.md  cubetac.cabal  package.yaml
app/: AgdaShow.agda  Main.hs  Parser.hs  PathParser.hs
app/agda/: Agda.hs  Prelude.agda  Prelude.agdai  Tactic.agda  cubetac
examples/: interval.agda  interval.cube  intervalapp1.agda  loopspace.cube  loopspace3.cube  s1.cube  sphere.agda  suspbool.cube  triangle.cube
notes/: algorithms.fdb_latexmk  algorithms.fls  algorithms.tex  bibliography.bib  description.aux  description.bbl  description.blg  description.fdb_latexmk  description.fls  description.out  description.tex
notes/auto/: algorithms.el  algpseudocodex.el  description.el
notes/talks/vienna/: presentation.tex
src/: Benchmark.hs  CompSolver.hs  CompositionSolver.hs  Conn.hs  Cont.hs  ContortionSolver.hs  Core.hs  Data.hs  DeMorgan.hs  Deg.hs  Examples.hs  Exp.hs  Formula.hs  Poset.hs  Prel.hs  SimpleSolver.hs  Solver.hs  Subst.hs  Type.hs
src/Rulesets/: Cart.hs  Conn.hs  Cont.hs  DeMo.hs  DeMoTable.hs  DeMorgan.hs  Dede.hs  Deg.hs  Disj.hs  PMap.hs  TruthTable.hs
src/old/: CompositionSolver.hs  Examples.hs  Formula.hs  Type.hs
test/: Spec.hs
