cabal-version: 1.12

name:           cubetac
version:        0.1.0.0
description:    Solver for boundary problems in cubical type theories
homepage:       https://github.com/maxdore/cubetac
bug-reports:    https://github.com/maxdore/cubetac/issues
author:         Maximilian Dore
maintainer:     maximilian.dore@cs.ox.ac.uk
copyright:      2025 Maximilian Dore
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/maxdore/cubetac

library
  exposed-modules:
      Benchmark
      Core
      Examples
      Poset
      Prel
      Rulesets.Cart
      Rulesets.Dede
      Rulesets.DeMo
      Rulesets.Disj
      Rulesets.PMap
      Rulesets.TruthTable
      Rulesets.DeMoTable
  other-modules:
      Paths_cubetac
  hs-source-dirs:
      src
  build-depends:
      attoparsec >=0.14.4
    , base >=4.7 && <5
    , containers >=0.6.4.1
    , mtl >=2.2.2
    , text >=1.2.5.0
  default-language: Haskell2010

executable cubetac-exe
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      attoparsec >=0.14.4
    , base >=4.7 && <5
    , containers >=0.6.4.1
    , cubetac
    , mtl >=2.2.2
    , text >=1.2.5.0
  default-language: Haskell2010

